objects/Year_End_Assignment_Selection__c.object
<CustomObject>
    <description>This object tracks the customer RM has selected for Year End Assignment</description>
    <fields>
        <fullName>AH_EmpID__c</fullName>
        <formula>Year_End_Assignment__r.AH_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH EmpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Is_my_team__c</fullName>
        <formula>IF (Selected_By__r.AH_Name__c =  $User.AH_Name__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH : Is my team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Name__c</fullName>
        <formula>Year_End_Assignment__r.AH_Name__c</formula>
        <label>AH Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_or_Refer_out__c</fullName>
        <label>Additional or Refer out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code__c</fullName>
        <formula>Year_End_Assignment__r.Business_Code__c</formula>
        <label>Business Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Desc__c</fullName>
        <formula>Year_End_Assignment__r.Business_Desc__c</formula>
        <label>Business Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <formula>Year_End_Assignment__r.CIS_ID_Unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Case_12M__c</fullName>
        <formula>Year_End_Assignment__r.Court_Case_12M__c</formula>
        <label>Court Case 12M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Case_Current_Year__c</fullName>
        <formula>Year_End_Assignment__r.Court_Case_Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Court Case Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Flag__c</fullName>
        <formula>Year_End_Assignment__r.Credit_Flag__c</formula>
        <label>Credit Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <formula>Year_End_Assignment__r.Credit_Status__c</formula>
        <label>Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Year_End_Assignment__r.CIS_ID__r.Name_Surname_TH__c</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPD6M__c</fullName>
        <formula>Year_End_Assignment__r.DPD6M__c</formula>
        <label>DPD6M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Year_End_Assignment__r.District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_2__c</fullName>
        <formula>Year_End_Assignment__r.RM_Last_Visited__c</formula>
        <label>Dummy 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_3__c</fullName>
        <formula>Year_End_Assignment__r.Dummy_3__c</formula>
        <label>Dummy 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_4__c</fullName>
        <formula>Year_End_Assignment__r.Dummy_4__c</formula>
        <label>Dummy 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Assigned_EMPID__c</fullName>
        <formula>Year_End_Assignment__r.Final_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Assigned EMPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Assigned_RC_Code__c</fullName>
        <formula>Year_End_Assignment__r.Final_RC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Assigned RC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Assigned_RM__c</fullName>
        <formula>Year_End_Assignment__r.Final_Assigned_SelectedBy_Text__c</formula>
        <label>Final Assigned/SelectedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Port_Pool__c</fullName>
        <formula>TEXT(Year_End_Assignment__r.Final_Port_Pool__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Port/Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Refer_Out_Reason_Detail__c</fullName>
        <formula>Year_End_Assignment__r.Refer_Out_Detail__c</formula>
        <label>Final Refer Out Reason Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Refer_Out_Reason__c</fullName>
        <formula>TEXT(Year_End_Assignment__r.Refer_Out_Reason__c)</formula>
        <label>Final Refer Out Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Refer_Out__c</fullName>
        <formula>Year_End_Assignment__r.Final_Refer_Out__c</formula>
        <label>Final Refer Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Service_RM__c</fullName>
        <formula>Year_End_Assignment__r.Final_Service_RM_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Service RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Team__c</fullName>
        <formula>Year_End_Assignment__r.Final_Assigned_RM__r.Team_Name__c</formula>
        <label>Final Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>TEXT(Year_End_Assignment__r.Group__c)</formula>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Value_Flag__c</fullName>
        <formula>Year_End_Assignment__r.High_Value_Flag__c</formula>
        <label>High Value Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_1M__c</fullName>
        <formula>Year_End_Assignment__r.Income_1M__c</formula>
        <label>Income 1M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NH_EmpID__c</fullName>
        <formula>Year_End_Assignment__r.NH_Employee_ID__c</formula>
        <label>NH EmpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Is_my_team__c</fullName>
        <formula>IF ( Selected_By__r.Network_Name__c  = $User.Network_Name__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NH : Is my team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Name__c</fullName>
        <formula>Year_End_Assignment__r.NH_Name__c</formula>
        <label>NH Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPL12M__c</fullName>
        <formula>Year_End_Assignment__r.NPL12M__c</formula>
        <label>NPL12M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Utilization_6M__c</fullName>
        <formula>Year_End_Assignment__r.OD_Utilization_6M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%OD Utilization 6M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PN_Utilization_6M__c</fullName>
        <formula>Year_End_Assignment__r.PN_Utilization_6M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%PN Utilization 6M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <formula>IF (  Port_Pool__c = &quot;Pool&quot;, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <formula>Year_End_Assignment__r.Port_Pool__c</formula>
        <label>Port / Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <formula>IF (  Port_Pool__c = &quot;Port&quot;, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <formula>Year_End_Assignment__r.Province__c</formula>
        <label>Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_EmpID__c</fullName>
        <formula>Year_End_Assignment__r.RM_Employee_ID__c</formula>
        <label>RM EmpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Last_Visited__c</fullName>
        <formula>Year_End_Assignment__r.RM_Last_Visited__c</formula>
        <label>RM Last Visited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Name__c</fullName>
        <formula>Year_End_Assignment__r.RM_Name__c</formula>
        <label>RM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_District__c</fullName>
        <label>Refer District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Amphur__c</fullName>
        <label>Refer Out: Amphur</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_By_Team__c</fullName>
        <label>Refer Out By Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Detail__c</fullName>
        <formula>CASE( TEXT(Refer_Out_Reason__c) , &quot;Other Team&quot;, Refer_Out_Team__c , &quot;Wrong Area&quot;, TEXT(Refer_Out_Tumbon__c) + &quot; &quot; + TEXT(Refer_Out_Amphur__c) + &quot; &quot; + TEXT(Refer_Out_Province__c) , &quot;Other Segment&quot;, TEXT(Refer_Out_Segment__c) , null)</formula>
        <label>Refer Out Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Province__c</fullName>
        <label>Refer Out: Province</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Reason__c</fullName>
        <label>Refer Out Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMLO List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exit Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Offense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Segment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Reason_fr_other__c</fullName>
        <label>Refer Out Reason from other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Segment__c</fullName>
        <label>Refer Out Segment</label>
        <picklist>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Team__c</fullName>
        <label>Refer Out Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Tumbon__c</fullName>
        <label>Refer Out: Tumbon</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refer Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refer_Province__c</fullName>
        <label>Refer Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Sub_District__c</fullName>
        <label>Refer Sub District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_To_Team__c</fullName>
        <label>Refer To Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Affiliate__c</fullName>
        <formula>Year_End_Assignment__r.Relationship_Affiliate__c</formula>
        <label>ความสัมพันธ์: บ.ในเครือ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Authorized_Director__c</fullName>
        <formula>Year_End_Assignment__r.Relationship_Authorized_Director__c</formula>
        <label>ความสัมพันธ์: กรรมการมีอำนาจลงนาม</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Joint_Obligor__c</fullName>
        <formula>Year_End_Assignment__r.Relationship_Joint_Obligor__c</formula>
        <label>ความสัมพันธ์: กู้ร่วม</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Spouse__c</fullName>
        <formula>Year_End_Assignment__r.Relationship_Spouse__c</formula>
        <label>ความสัมพันธ์: คู่สมรส</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Stockholder__c</fullName>
        <formula>Year_End_Assignment__r.Relationship_Stockholder__c</formula>
        <label>ความสัมพันธ์: ผู้ถือหุ้น</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <formula>Year_End_Assignment__r.Restriction__c</formula>
        <label>Restriction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_BSCORE_1M__c</fullName>
        <formula>Year_End_Assignment__r.SME_BSCORE_1M__c</formula>
        <label>SME BSCORE 1M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_BSCORE_2M__c</fullName>
        <formula>Year_End_Assignment__r.SME_BSCORE_2M__c</formula>
        <label>SME BSCORE 2M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_BSCORE_3M__c</fullName>
        <formula>Year_End_Assignment__r.SME_BSCORE_3M__c</formula>
        <label>SME BSCORE 3M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Limit_LI__c</fullName>
        <formula>Year_End_Assignment__r.SME_Limit_LI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SME Limit - LI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SME_Limit_TF__c</fullName>
        <formula>Year_End_Assignment__r.SME_Limit_TF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SME Limit - TF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SME_Wallet_Size__c</fullName>
        <formula>Year_End_Assignment__r.SME_Wallet_Size__c</formula>
        <label>SME Wallet Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOW_SME_Exposure__c</fullName>
        <formula>Year_End_Assignment__r.SOW_SME_Exposure__c</formula>
        <label>%SOW (SME Exposure)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVM_ID__c</fullName>
        <formula>Year_End_Assignment__r.Service_RM_Employee_ID__c</formula>
        <label>SVM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_Name__c</fullName>
        <formula>Year_End_Assignment__r.Service_RM_Name__c</formula>
        <label>SVM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Original__c</fullName>
        <formula>TEXT(Year_End_Assignment__r.Segment_Original__c)</formula>
        <label>Segment (Original)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Proposed__c</fullName>
        <formula>TEXT(Year_End_Assignment__r.Segment_Proposed__c)</formula>
        <label>Segment (Proposed)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_By_Area_Name__c</fullName>
        <formula>Selected_By__r.Area_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected By Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_By_Name__c</fullName>
        <formula>Selected_By__r.FirstName + &quot; &quot; + Selected_By__r.LastName</formula>
        <label>Selected By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_By_Team__c</fullName>
        <formula>Selected_By__r.Team_Name__c</formula>
        <label>Selected By Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Year_End_Assignment_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Count_Report__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Count__c</fullName>
        <formula>Year_End_Assignment__r.Selected_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Port_Pool__c</fullName>
        <label>Selected Port Pool</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Service_RM_Name_Text__c</fullName>
        <formula>Selected_Service_RM_Name__r.FirstName&amp;&quot; &quot;&amp;Selected_Service_RM_Name__r.LastName</formula>
        <label>Selected Service RM Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Service_RM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Service RM Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Year_End_Assignment_Selections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_by_EmpID__c</fullName>
        <formula>Selected_By__r.Employee_ID__c</formula>
        <label>Selected by EmpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_by_Network_Name__c</fullName>
        <formula>Selected_By__r.Network_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected by Network Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM_Name__c</fullName>
        <formula>Year_End_Assignment__r.Service_RM_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service RM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_District__c</fullName>
        <formula>Year_End_Assignment__r.Sub_District__c</formula>
        <label>Sub District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDR_12M__c</fullName>
        <formula>Year_End_Assignment__r.TDR_12M__c</formula>
        <label>TDR 12M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Utilization_6M__c</fullName>
        <formula>Year_End_Assignment__r.TF_Utilization_6M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%TF Utilization 6M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TM_EmpID__c</fullName>
        <formula>Year_End_Assignment__r.TM_Employee_ID__c</formula>
        <label>TM EmpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Is_my_team__c</fullName>
        <formula>IF (  Selected_By__r.Team_Name__c = $User.Team_Name__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM : Is my team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Name__c</fullName>
        <formula>Year_End_Assignment__r.TM_Name__c</formula>
        <label>TM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Year_End_Assignment__r.Team__c</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <formula>Year_End_Assignment__r.Total_Income__c</formula>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Exposure__c</fullName>
        <formula>Year_End_Assignment__r.Total_SME_Exposure__c</formula>
        <label>Total SME Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Limit__c</fullName>
        <formula>Year_End_Assignment__r.Total_SME_Limit__c</formula>
        <label>Total SME Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Out__c</fullName>
        <formula>Year_End_Assignment__r.Total_SME_Out__c</formula>
        <label>Total SME Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UW_Color_Group__c</fullName>
        <formula>TEXT(Year_End_Assignment__r.UW_Color_Group__c)</formula>
        <label>UW Color Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visited_Count__c</fullName>
        <formula>Year_End_Assignment__r.Visited_Count__c</formula>
        <label>Visited Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_End_Assignment__c</fullName>
        <label>Year-End Assignment</label>
        <referenceTo>Year_End_Assignment__c</referenceTo>
        <relationshipLabel>Year-End Assignment Selections</relationshipLabel>
        <relationshipName>Year_End_Assignment_Selections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Year-End Assignment Selection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Ref-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Year-End Assignment Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>